--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,8 @@
-<h1>This is the index page</h1>
 
 <% @posts.each do |post| %> 
     <div class="post_wrapper">
         <h2 class="title"><%= link_to post.title, post %></h2>
-        <p class="date"><%= time_ago_in_words(post.created_at) %></p>
+        <p class="date"><%= time_ago_in_words(post.created_at) %> </p>
+        <p class="body"><%= truncate(post.body, length:100)%></p>
     </div>
 <% end %>
