--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,11 @@
       <li><%= link_to "Posts", root_path %> </li>
       <li><%= link_to "About", about_path %></li>
     </ul>
-    <p class="sign_in">User Login</p>
+    
+    <% if !boser_signed_in? %>
+      <p class="sign_in"><%= link_to "User Login", new_boser_session_path %></p>
+    <% end %>
+    
   </div>
   
   <div id="main_content">
@@ -31,13 +35,18 @@
       <%= link_to "Back to Post Feed", root_path %>
       <% end %>
       
-      <div class="buttons">
-        <button class="button"><%= link_to "Make Post", new_post_path %> </button>
-        <button class="button">Log Out</button>
-      </div>
-    </div>
+      <% if boser_signed_in? %>
+        <div class="buttons">
+          <button class="button"><%= link_to "Make Post", new_post_path %> </button>
+          <button class="button"><%= link_to "Sign Out", destroy_boser_session_path, method: :delete %> </button>
+        </div>
+      <% end %>
+    </div><!-- main content -->
+   
+   
+   
     <% flash.each do |name, msg| %> 
-    <%= content_tag(:div, msg, class: "alert" ) %>
+      <%= content_tag(:div, msg, class: "alert" ) %>
     <% end %>
     
     <%= yield %>
